# shallabuf

./: .editorconfig  .env.docker  .gitignore  Cargo.toml  Dockerfile.api  Dockerfile.scheduler  Dockerfile.worker  README.md  Rocket.toml  bun.lockb  docker-compose.yaml  loki-config.yaml  package.json  prometheus.yaml  tsconfig.json
.sqlx/: query-0ce7d7930dff8adf6a870d8b17df2a925c1f6cf77e4484cc31b1cdaf60e52750.json  query-1fbe6ef20b25dede510de395cf9e25fc94db1cfe5f90102fd46c87431a5808d0.json  query-2d5a980efc62500e9eb3c5e390b84a34517d6c87c5a81986465cec94df7da933.json  query-2e7200c4fee5e13484790253990af78d1eef24357d9ee5f1ea545bddb4f9869c.json  query-3242ec6c5062e82f1d3afd387c86fdcb5fdbe9f78d8c0a6ec3b21e2615ebf250.json  query-34f4b0c94060423a44cb9a446893afada3ff8052eb10a3aad94bb99eff677e2b.json  query-365617d936e28c145865bb8e11af678862d65a02deed4ef0331820bbc1a6993c.json  query-3a320cc206a614cce04764d463bbee37f5426f1bb16e135cefac72fed5114aac.json  query-4bcbe975df4d71e55514aa3d8166b9ac7fcabc192a47ad043dc891b3003401a4.json  query-4eb23544745468bfbe4c3e0a17410ec0ffb8ecb653d7225ec70ccf3f1f8e92af.json  query-5174d2052f58614b8e51e45ad5a7d0d7411295ce4c312c566a31c9ab056441ea.json  query-525271f6b08b4ad924de0ff23bd6a06068504cd678f829c546488baabbc80fe0.json  query-567e54df8800a98e239aa232b77527959c3b54e9f4c3f5c2b8a415517cc1a262.json  query-5f216385491e7835532a8d0e0d512943b69dfc3c27fe09d9451fb7f8636e79a7.json  query-65b3b05501d598be9b4da878785bacf34d1fe25b9bad33a4257d14481a26b47d.json  query-72d0eac67056ab9f4f103df689d1921bf47cc4cd062972396948556c8d4e8b07.json  query-7476eb41ecd35c830064b763c36af2abc1fd7145a6c3482fda515bc23ac15bd8.json  query-75e0ecbf3da4409f39f1dfb71fe6a344d4de3396ff351295301dc4357ab0fd18.json  query-786a4129d33541f0f182b3aa4dccc4d69de68170d87d04baae4e0412c8187bfd.json  query-7ba034ae50f78d332ad8a4b3178521949ddc688f6a081e142a55ae6ac38c7c61.json  query-83f1f100508259c4ce023f4fa6478cc3a575563256d3c7b8ea220a9e312aea57.json  query-8477fb91c0c7832bd174ee0e3599758a45b2fa4ecd2eeff8b83cc568fad14b3b.json  query-984708022fddd7e4583ee0792e3f2cee1cfa72a8d8633b5c2bdbc5300b281c51.json  query-9d5b0db5af6827ec387d491d3e84978fa6b0b7102ed895b774c32519635d55a3.json  query-a4f5e847839ab3b5e76c8f6fa88e0f9d14d4255fdf73665442d20f5cf6e18e14.json  query-a53f28a0adb2be1be8745a5571774d836a7f3002f495cffcf0ae4535c2612e2d.json  query-a8d2659042db84c746889397a695a3445323ed05ab589a729a9296379f0c0531.json  query-aa898ad828e56cf9c5901fa0075d8b8db785f74f63f9ebbd3a2cb8ff0cd7ae87.json  query-ae14db6e54888f5de0b91c457eca7634ddaead30fbb5c523ffbc2d458d24ba7a.json  query-afa9ed5ec22bc2e9b10e907087403eb4dbf6c0c4d5ecc7128f6327b81addd640.json  query-b506681a3f8defad3b8b6271e2caa16b96ef363f807ab9655f06e49b0ea34939.json  query-b965512f45f63174ce0549fc01dd615924aeac18b4d832ffb842b571ddcce4f2.json  query-c2c45d1de9312bec48f5dc52538fdfc2cb6c5b8237022c6e6441c1596632f3e7.json  query-c868f5715db05b568c2d8c89faa043bd707e462bd4bc38238e666e4d99ffcdc8.json  query-ce2b21c414f4f609786ec26ec5a6eb3bbbefb330d1f4767cd616d9fad8ab1d98.json  query-d7f3dec576e87055f2d7195206d61f228bf1ad70485338c28e64164b56835425.json  query-d92bb2410f99a634d8b3eeb18c7e28ca4f17a65786eec3c06e8b65904ca5572e.json  query-d9c0ec562d83ca8e18d962f7d68d30075f021c01417145e96fa0b729e1d38f43.json  query-ddf6238b6fbfcfafaa29acbd463a9ecafeafb66d182801fc934e7596b85a6647.json  query-df3e3efd4e71c28396834e8a679b5b8fde7f19a68c308cdbd557aa615de9c3c3.json  (+4 more)
api/: Cargo.toml  Dockerfile
api/src/: app_state.rs  main.rs  pool.rs
api/src/lib/: session.rs
api/src/routes/api/v0/: auth.rs  events.rs  mod.rs  nodes.rs  pipeline.rs  pipeline_execs.rs  pipeline_nodes.rs  pipeline_nodes_connections.rs  pipeline_triggers.rs  pipelines.rs  teams.rs
apps/api/: package.json
apps/api/supabase/functions/: import_map.json
apps/app/: next.config.mjs  package.json  sentry.client.config.ts
apps/app/src/: middleware.ts
apps/app/src/actions/: safe-action.ts
apps/app/src/components/: google-signin.tsx  sign-out.tsx
apps/web/: package.json  tailwind.config.ts  tsconfig.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/components/: copy-text.tsx  header.tsx  subscribe-form.tsx
builtins/: Cargo.toml  btc-price.wasm  builtins.wasm  echo.wasm  generate-image.wasm  text-transformer.wasm
builtins/src/: lib.rs
db/: Cargo.toml
db/migrations/: 20241206173121_pipeline_schema.down.sql  20241206173121_pipeline_schema.up.sql  20241212133003_auth.down.sql  20241212133003_auth.up.sql  20241212133007_pipeline.down.sql  20241212133007_pipeline.up.sql  20241212133015_pipeline_triggers.down.sql  20241212133015_pipeline_triggers.up.sql
db/src/: lib.rs  seed.rs
db/src/dtos/: exec_status.rs  mod.rs  node_config.rs  node_container_type.rs  pipeline_exec.rs  pipeline_exec_event.rs  pipeline_exec_payload.rs  pipeline_execs_payload.rs  pipeline_node_exec_payload.rs  pipeline_node_exec_result_payload.rs  pipeline_node_execs_payload.rs  pipeline_plan_payload.rs
db/src/entities/: mod.rs  nodes.rs  organizations.rs  pipeline.rs  pipeline_exec.rs  pipeline_node_exec.rs  pipeline_nodes.rs  pipeline_nodes_connections.rs  pipeline_nodes_exec.rs  pipeline_triggers.rs  pipelines.rs  prelude.rs  sea_orm_active_enums.rs  teams.rs  templates.rs
db/src/migrations/: m20220101_000001_auth_schema.rs  m20241208_130842_pipeline_schema.rs  mod.rs
event-bridge/src/: main.rs
scheduler/: Cargo.toml  Dockerfile
scheduler/src/: main.rs  pipeline_run.rs
scheduler/src/models/: mod.rs  pipeline_nodes_with_connections.rs
tooling/typescript/: package.json
web/: bun.lockb  components.json  next.config.ts  package.json
web/src/: env.ts  middleware.ts
web/src/actions/: create-pipeline-node-connection.ts  create-pipeline-node.ts  create-pipeline-trigger-connection.ts  create-pipeline.ts  login.ts  update-pipeline-node.ts
web/src/app/: layout.tsx
web/src/app/_providers/: index.tsx
web/src/app/_ws/: ws-action.ts  (+1 more)
web/src/contexts/: ws-store-context.tsx
web/src/lib/: auth.ts  dtos.ts  guards.ts  schemas.ts
web/src/stores/: ws-store.ts
worker/: Cargo.toml
worker/src/: main.rs
(+32 files in other folders)
