[package]
name = "api"
version = "0.0.1"
edition = "2021"

[dependencies]
rocket = { version = "^0.5", features = ["json"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
sqlx = { version = "^0.8", features = ["postgres", "runtime-tokio-native-tls", "json", "time", "uuid"] }
uuid = { version = "^1", features = ["v4", "serde"] }
async-nats = "^0.38"
db = { git = "https://github.com/patchwork-body/shallabuf.git/db", branch = "main" }
