[package]
name = "api"
version = "0.0.1"
edition = "2021"

[dependencies]
rocket = { version = "^0.5", features = ["json"] }
sea-orm-rocket = "^0.5"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
sea-orm = { version = "^1.1", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "with-json", "with-chrono", "with-uuid"] }
uuid = { version = "^1", features = ["v4", "serde"] }
async-nats = "^0.38"
async-trait = "^0.1"
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
db = { path = "../db" }
