[package]
name = "api"
version = "0.0.1"
edition = "2021"

[dependencies]
axum = { version = "^0.7", features = ["ws"] }
tokio = { version = "^1", features = ["full"] }
tower = "^0.5"
hyper = { version = "^1.5", features = ["full"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
uuid = { version = "^1", features = ["v4", "serde"] }
async-nats = "^0.38"
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
sqlx = { version = "^0.8", features = ["postgres", "runtime-tokio-native-tls", "macros", "json", "time", "uuid"] }
dotenvy = "0.15"
tower-http = { version = "^0.6", features = ["cors"] }
db = { path = "../db" }
redis = { version = "^0.27", features = ["tokio-comp"] }
