[package]
name = "db"
version = "0.1.0"
edition = "2021"

[lib]
name = "db"
path = "src/lib.rs"

[dependencies]
sea-orm = { version = "^1.1", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "with-json", "with-chrono", "with-uuid"] }
sea-orm-migration = { version = "^1.1", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
uuid = { version = "^1", features = ["v4", "serde"] }
async-std = { version = "^1", features = ["attributes", "tokio1"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
