[package]
name = "db"
version = "0.1.0"
edition = "2021"

[lib]
name = "db"
path = "src/lib.rs"

[dependencies]
uuid = { version = "^1", features = ["v4", "serde"] }
async-std = { version = "^1", features = ["attributes", "tokio1"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
anyhow = "^1"
argon2 = "^0.5"
sqlx = { version = "^0.8", features = ["postgres", "runtime-tokio-native-tls", "macros", "json", "time", "uuid"] }
