[package]
name = "scheduler"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
sqlx = { version = "^0.8", features = ["postgres", "runtime-tokio-native-tls", "json", "time", "uuid"] }
uuid = { version = "^1", features = ["v4", "serde"] }
async-nats = "^0.38"
futures = "^0.3"
db = { git = "https://github.com/patchwork-body/shallabuf.git/db", branch = "main" }
