[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "^1"
async-nats = "^0.38"
futures = "^0.3"
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
wasmtime = "^27"
db = { path = "../db" }
